<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.editDialog.EditUniversityAffliationFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/enter_your_universityname_set"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="317dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawSelectorOnTop="true"
            android:ems="10"
            android:entries="@array/university_name"
            android:hint="@string/enter_your_name"
            android:inputType="textWebEmailAddress|textPersonName"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/study_level_settings"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="317dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawSelectorOnTop="true"
            android:ems="10"
            android:entries="@array/study_level_name"
            android:hint="@string/study_level"
            android:inputType="textPersonName|textCapWords"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/departement_settings"
            style="Port Lligat Slab"
            android:layout_width="317dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:drawSelectorOnTop="true"
            android:ems="10"
            android:entries="@array/departement_name"
            android:hint="@string/department"
            android:inputType="textPersonName|textCapWords"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textColor="#F80A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next_button_foe_university"
            android:layout_width="326dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:contextClickable="true"
            android:ems="10"
            android:freezesText="true"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="#F3EBEB"
            android:textSize="16sp"
            android:textStyle="bold" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonfor_university"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="320dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="50dp"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>