<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7CCEC"
    tools:context=".signUp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp">

        <ImageView
            android:id="@+id/signuppic"
            android:layout_width="345dp"
            android:layout_height="302dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/signuppic"
            tools:ignore="DuplicateIds,MissingConstraints" />

        <EditText
            android:id="@+id/enter_your_email_sign"
            style="Port Lligat Slab"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textWebEmailAddress|textPersonName"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signuppic"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/enter_your_name_sign"
            style="Port Lligat Slab"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName|textCapWords"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signuppic" />

        <EditText
            android:id="@+id/enter_password_signup"
            style="Port Lligat Slab"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName|textPassword"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signuppic"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/enter_confirm_pass_signup"
            style="Port Lligat Slab"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName|textPassword"
            android:shadowDx="30"
            android:shadowDy="30"
            android:shadowRadius="50"
            android:textAlignment="viewStart"
            android:textColor="#3C0A090B"
            android:textColorHint="#E9E2EA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signuppic" />

        <TextView
            android:id="@+id/signup_button"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/rounded_button"
            android:contextClickable="true"
            android:ems="10"
            android:freezesText="true"
            android:onClick="profile"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/go_for_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="03dp"
            android:text="@string/already_have_an_account_login"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>